pwm still not working.

--- a/BB-pid0-00A0.dts
+++ b/BB-pid0-00A0.dts
@@ -26,10 +26,10 @@
 			/* P9_15_gpio_pin: pinmux_P9_15_gpio_pin */
 				0x040  0x2F /* *will need to be configured outupt* Mode 7, RxActive */
 			/* P9_16_gpio_pin: pinmux_P9_16_gpio_pin */
-				0x04c  0x2F /* again, to be outupt. Mode 7, RxActive */
+				0x04c  0x2F /* again, to be output. Mode 7, RxActive */
 			>;
-			};
-		};
+			}; 
+		}
 	};
 	fragment@1 {
 		target = <&ocp>;
