--- a/BB-pid0-00A0.dts
+++ b/BB-pid0-00A0.dts
@@ -4,8 +4,21 @@
 
 / {
 	compatible = "ti,beaglebone", "ti,beaglebone-black";
-	part-number = "BB-pid0"; /* pin 9.22 */
+	part-number = "BB-pid0";
 	version = "00A0";
+	exclusive-use = 
+		"P9.27", 
+		"P9.41", 
+		"P9.91", 
+		"P9.42", 
+		"P9.92", 
+		"P9.22", 
+		"P9.15", 
+		"P9.16", 
+		"ehrpwm0A",
+		"epwmss0",
+		"eqep0"; 
+		
 	fragment@0 {
 		target = <&am33xx_pinmux>;
 		__overlay__ {
@@ -22,7 +35,7 @@
 			/* P9_92_qep_pin: pinmux_P9_92_qep_pin */
 				0x1a0  0x21 /* Mode 1, Pull-Down, RxActive */
 			/* P9_22 Mode3 ehrpwm0A PWM */
-				0x150 0x33 
+				0x150  0x33 
 			/* P9_15_gpio_pin: pinmux_P9_15_gpio_pin */
 				0x040  0x2F /* *will need to be configured outupt* Mode 7, RxActive */
 			/* P9_16_gpio_pin: pinmux_P9_16_gpio_pin */
