--- a/BB-PWM2-00A0.dts
+++ b/BB-PWM2-00A0.dts
@@ -1,45 +1,51 @@
+/*
+ * Copyright (C) 2015 Robert Nelson <robertcnelson@gmail.com>
+ *
+ * Virtual cape for CAN1 on connector pins P9.24 P9.26
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 2 as
+ * published by the Free Software Foundation.
+ */
 /dts-v1/;
 /plugin/;
 
+#include </usr/src/bb.org-overlays/inlude/dt-bindings/board/am335x-bbw-bbb-base.h>
+#include </usr/src/bb.org-overlays/inlude/dt-bindings/pinctrl/am33xx.h>
+
 / {
-compatible = "ti,beaglebone", "ti,beaglebone-black";
-part-number = "BB-PWM2";
-version = "00A0";
+	compatible = "ti,beaglebone", "ti,beaglebone-black", "ti,beaglebone-green";
 
-fragment@0 {
-target = <&am33xx_pinmux>;
-__overlay__ {
-pinctrl_spec: Panel_Pins {
-pinctrl-single,pins = <
-0x020 0x04 /* P8_19 MODE4 ehrpwm2A PWM */
->;
-};
-};
-};
+	/* identification */
+	part-number = "BB-CAN1";
+	version = "00A0;
 
-fragment@1 {
-target = <&ocp>;
-__overlay__ {
-test_helper: helper {
-compatible = "bone-pinmux-helper";
-pinctrl-names = "default";
-pinctrl-0 = <&pinctrl_spec>;
-status = "okay";
-};
-};
-};
+	/* state the resources this cape uses */
+	exclusive-use =
+		/* the pin header uses */
+		"P9.27",	/* eqep0 */
+		"P9.26",	/* can1_tx */
+		/* the hardware ip uses */
+		"dcan1";
 
-fragment@2 {
-target = <&epwmss2>;
-__overlay__ {
-status = "okay";
-};
-};
+	fragment@0 {
+		target = <&am33xx_pinmux>;
+		__overlay__ {
+			bb_dcan1_pins: pinmux_dcan1_pins {
+				pinctrl-single,pins = <
+					BONE_P9_27 (PIN_INPUT_PULLDOWN | MUX_MODE1) /* uart1_txd.d_can1_rx */
+					BONE_P9_26 (PIN_OUTPUT_PULLUP | MUX_MODE2) /* uart1_rxd.d_can1_tx */
+				>;
+			};
+		};
+	};
 
-fragment@3 {
-target = <&ehrpwm2>;
-__overlay__ {
-status = "okay";
-};
-};
+	fragment@1 {
+		target = <&eqep0>;
+		__overlay__ {
+			status = "okay";
+			pinctrl-names = "default";
+			pinctrl-0 = <&bb_dcan1_pins>;
+		};
+	};
 };
