--- a/dts/src/arm/BB-PWM2-00A0.dts
+++ b/dts/src/arm/BB-PWM2-00A0.dts
@@ -18,7 +18,7 @@
 
 	/* identification */
 	part-number = "BB-CAN1";
-	version = "00A0;
+	version = "00A0";
 
 	/* state the resources this cape uses */
 	exclusive-use =
